--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@astrojs/solid-js": "^2.2.1",
     "@astrojs/tailwind": "^4.0.0",
+    "@tanstack/solid-query": "^4.33.0",
     "@types/d3": "^7.4.0",
     "@wagmi/core": "^1.3.9",
     "astro": "^2.10.14",
     "clsx": "^2.0.0",
     "d3": "^7.8.5",
+    "graphql": "^16.8.0",
+    "graphql-request": "^6.1.0",
     "solid-js": "^1.4.3",
     "tailwindcss": "^3.0.24",
     "viem": "^1.7.0"
