--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "solid-js": "^1.4.3",
     "solid-transition-group": "^0.2.3",
     "tailwindcss": "^3.0.24",
-    "viem": "^1.7.0"
+    "viem": "^1.7.0",
+    "zod": "^3.22.2"
   }
 }
